--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                 <i class="fab fa-cc-mastercard"></i>
                             </div>
                                                          <div class="card-details">
-                                 <h3>Банковская карта</h3>
+                                 <h3>Альфа Банк - перевод по номеру карты</h3>
                                  <div class="card-number">2200 1520 5722 7756</div>
                              </div>
                         </div>
