--- a/index.html
+++ b/index.html
@@ -404,12 +404,13 @@
                         <li><a href="#about">О нас</a></li>
                         <li><a href="#services">Услуги</a></li>
                         <li><a href="#contact">Контакты</a></li>
+                        <li><a href="#" id="requisitesFooterBtn">Реквизиты</a></li>
                     </ul>
                 </div>
                 <div class="footer-social">
                     <h4>Социальные сети</h4>
                     <div class="social-links">
-                        <a href="https://vk.com/club228916442" target="_blank"><i class="fab fa-vk"></i></a>
+                        <a href="https://vk.com/club37665708" target="_blank"><i class="fab fa-vk"></i></a>
                         <a href="https://www.youtube.com/@Voeykovotennis" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
