--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <i class="fas fa-table-tennis"></i>
+                <img src="logo/logo.JPG" alt="Логотип клуба настольного тенниса Воейково" class="logo-image">
                 <span>АНО КНТ "Воейково"</span>
             </div>
             <ul class="nav-menu">
@@ -392,7 +392,7 @@
             <div class="footer-content">
                 <div class="footer-info">
                     <div class="footer-logo">
-                        <i class="fas fa-table-tennis"></i>
+                        <img src="logo/logo.JPG" alt="Логотип клуба настольного тенниса Воейково" class="logo-image">
                         <span>АНО КНТ "Воейково"</span>
                     </div>
                     <p>Профессиональные тренировки по настольному теннису для всех возрастов и уровней подготовки.</p>
