fix minor bug ui

--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-card">
-                        <div class="contact-icon">
+                        <div class="contact-icon whatsapp">
                             <i class="fab fa-whatsapp"></i>
                         </div>
                         <h3>WhatsApp</h3>
                         <p>8-921-898-85-74</p>
-                        <a href="https://wa.me/79218988574" class="contact-link">Написать</a>
+                        <a href="https://wa.me/79218988574" class="contact-link whatsapp-link">Написать</a>
                     </div>
                     <div class="contact-card">
                         <div class="contact-icon">
@@ -313,7 +313,7 @@
                         
                         <div class="requisites-row">
                             <span class="requisites-label">Валюта:</span>
-                            <span class="requisites-value">RUR</span>
+                            <span class="requisites-value">RUB</span>
                         </div>
                         
                         <div class="requisites-row">
@@ -410,7 +410,7 @@
                 <div class="footer-social">
                     <h4>Социальные сети</h4>
                     <div class="social-links">
-                        <a href="https://vk.com/club37665708" target="_blank"><i class="fab fa-vk"></i></a>
+                        <a href="https://vk.com/club37665708" target="_blank" class="vk"><i class="fab fa-vk"></i></a>
                         <a href="https://www.youtube.com/@Voeykovotennis" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
